<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/receivedFragment"
            android:icon="@drawable/ic_received_black"
            android:title="@string/menu_received" />
        <item
            android:id="@+id/storageFragment"
            android:icon="@drawable/ic_storage_black"
            android:title="@string/menu_storage" />
        <item
            android:id="@+id/turnoverFragment"
            android:icon="@drawable/ic_turnover_black"
            android:title="@string/menu_turnover" />
        <item
            android:id="@+id/workFragment"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_work" />
    </group>


</menu>
