<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addreceipt.AddReceiptFragment">

    <data>

        <variable
            name="vm"
            type="ua.com.eco_lab.recycling.ui.addreceipt.AddReceiptViewModel" />

        <variable
            name="fragment"
            type="ua.com.eco_lab.recycling.ui.addreceipt.AddReceiptFragment" />


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_donor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/add_receipt_donor_hint"
                android:layout_margin="@dimen/til_edittext_margins">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_donor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/add_receipt_text_size"
                    android:background="@android:color/transparent"
                    android:layout_margin="@dimen/edittext_margins"
                    android:text="@={vm.receipt.donorName}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/add_receipt_dater_hint"
                android:layout_margin="@dimen/til_edittext_margins">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/add_receipt_text_size"
                    android:background="@android:color/transparent"
                    android:layout_margin="@dimen/edittext_margins"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:longClickable="false"
                    android:onClick="@{fragment::setDate}"
                    app:dateDayMonthYear="@{vm.receipt.dateReceived}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_next"
                style="@style/MaterialButton.Unelevated"
                android:layout_margin="@dimen/material_button_margins"
                android:text="@string/add_receipt_next"
                android:onClick="@{vm::addEquipment}"/>

        </LinearLayout>

    </ScrollView>


</layout>